--- a/CS-330 3D Scene/CS-330 3D Scene.vcxproj.filters
+++ b/CS-330 3D Scene/CS-330 3D Scene.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Resource Files\shaders">
       <UniqueIdentifier>{0a39c5a4-d26f-4fd5-8b79-334edc8d4a9e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\data">
+      <UniqueIdentifier>{af2119c3-9b5b-43d3-aa03-e2b73c582f0e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="glad.c">
@@ -25,6 +28,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="events.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="models.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -41,6 +47,12 @@
     <ClInclude Include="shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="models.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenGL-GLFW-GLAD-glm-Headers.props" />
@@ -51,5 +63,10 @@
     <None Include="shaders\single_texture.vs.glsl">
       <Filter>Resource Files\shaders</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="data\wood.jpg">
+      <Filter>Resource Files\data</Filter>
+    </Image>
   </ItemGroup>
 </Project>
