--- a/CS-330 3D Scene/CS-330 3D Scene.vcxproj
+++ b/CS-330 3D Scene/CS-330 3D Scene.vcxproj
@@ -165,6 +165,7 @@
     <None Include="shaders\single_texture.vs.glsl" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="data\switch.jpg" />
     <Image Include="data\wood.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
