--- a/CS-330 3D Scene/CS-330 3D Scene.vcxproj.filters
+++ b/CS-330 3D Scene/CS-330 3D Scene.vcxproj.filters
@@ -68,5 +68,8 @@
     <Image Include="data\wood.jpg">
       <Filter>Resource Files\data</Filter>
     </Image>
+    <Image Include="data\switch.jpg">
+      <Filter>Resource Files\data</Filter>
+    </Image>
   </ItemGroup>
 </Project>
