--- a/CS-330 3D Scene/CS-330 3D Scene.vcxproj
+++ b/CS-330 3D Scene/CS-330 3D Scene.vcxproj
@@ -164,6 +164,7 @@
     <None Include="shaders\single_texture.vs.glsl" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="data\orange.jpg" />
     <Image Include="data\switch.jpg" />
     <Image Include="data\wood.jpg" />
   </ItemGroup>
