Added lights.h and prototypes

--- a/CS-330 3D Scene/CS-330 3D Scene.vcxproj
+++ b/CS-330 3D Scene/CS-330 3D Scene.vcxproj
@@ -152,6 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="events.h" />
+    <ClInclude Include="lights.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="models.h" />
     <ClInclude Include="shader.h" />
