--- a/CS-330 3D Scene/CS-330 3D Scene.vcxproj.filters
+++ b/CS-330 3D Scene/CS-330 3D Scene.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="lights.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenGL-GLFW-GLAD-glm-Headers.props" />
