Added lights.cpp, implemented lights_init()

--- a/CS-330 3D Scene/CS-330 3D Scene.vcxproj
+++ b/CS-330 3D Scene/CS-330 3D Scene.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClCompile Include="events.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="lights.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="models.cpp" />
   </ItemGroup>
