added function and shaders to draw Model normals

--- a/CS-330 3D Scene/CS-330 3D Scene.vcxproj
+++ b/CS-330 3D Scene/CS-330 3D Scene.vcxproj
@@ -162,6 +162,9 @@
   <ItemGroup>
     <None Include="OpenGL-GLFW-GLAD-glm-Headers.props" />
     <None Include="OpenGL-GLFW-GLAD-glm-Win32.props" />
+    <None Include="shaders\draw_normals.fs.glsl" />
+    <None Include="shaders\draw_normals.gs.glsl" />
+    <None Include="shaders\draw_normals.vs.glsl" />
     <None Include="shaders\radiant_light.fs.glsl" />
     <None Include="shaders\radiant_light.vs.glsl" />
     <None Include="shaders\single_texture.fs.glsl" />
