moved load_wrap_texture to utils.h

--- a/CS-330 3D Scene/CS-330 3D Scene.vcxproj
+++ b/CS-330 3D Scene/CS-330 3D Scene.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="lights.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="models.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="events.h" />
@@ -158,6 +159,7 @@
     <ClInclude Include="models.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenGL-GLFW-GLAD-glm-Headers.props" />
@@ -165,6 +167,7 @@
     <None Include="shaders\draw_normals.fs.glsl" />
     <None Include="shaders\draw_normals.gs.glsl" />
     <None Include="shaders\draw_normals.vs.glsl" />
+    <None Include="shaders\material_single_texture.fs.glsl" />
     <None Include="shaders\radiant_light.fs.glsl" />
     <None Include="shaders\radiant_light.vs.glsl" />
     <None Include="shaders\single_texture.fs.glsl" />
