--- a/CS-330 3D Scene/CS-330 3D Scene.vcxproj.filters
+++ b/CS-330 3D Scene/CS-330 3D Scene.vcxproj.filters
@@ -104,5 +104,8 @@
     <Image Include="data\soda.jpg">
       <Filter>Resource Files\data</Filter>
     </Image>
+    <Image Include="data\switch_specular_map.jpg">
+      <Filter>Resource Files\data</Filter>
+    </Image>
   </ItemGroup>
 </Project>
